Finally fixed costumer testimonial x separation

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </div>
     </header>
     <!-- About-->
-      <section class="page-section" id="about">
+    <section class="page-section" id="about">
         <div class="container">
             <div class="text-center">
                 <h2 class="section-heading text-uppercase mb-4">Sobre Nós</h2>
@@ -211,82 +211,90 @@
             <div class="text-center">
                 <h2 class="section-heading text-uppercase mb-5">Avaliações dos Nossos Clientes</h2>
             </div>
-            <div class="row g-2">
-                <div class="col-lg-6 costumer-testimonial">
-                    <div class="row">
-                        <img class="col-4" src="assets/img/costumers/sonia-costa.png" alt="costumer-portrait">
-                        <div class="col-8">
-                            <div class="h4">Sónia Costa</div>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
+            <div class="row row-cols-lg-2 row-cols-1">
+                <div class="col mb-4">
+                    <div class="costumer-testimonial h-100">
+                        <div class="row">
+                            <img class="col-4" src="assets/img/costumers/sonia-costa.png" alt="costumer-portrait">
+                            <div class="col-8">
+                                <div class="h4">Sónia Costa</div>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                            </div>
                         </div>
-                    </div>
-                    <div class="text-justify">
-                        O verdadeiro pecado sem culpas!
-                        Produtos de excelente qualidade e excelente sabor.
+                        <div class="text-justify">
+                            O verdadeiro pecado sem culpas!
+                            Produtos de excelente qualidade e excelente sabor.
+                        </div>
                     </div>
                 </div>
-                <div class="col-lg-6 costumer-testimonial">
-                    <div class="row">
-                        <img class="col-4" src="assets/img/costumers/monica-rodrigues.png" alt="costumer-portrait">
-                        <div class="col-8">
-                            <div class="h4">Mónica Rodrigues</div>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
+                <div class="col mb-4">
+                    <div class="costumer-testimonial h-100">
+                        <div class="row">
+                            <img class="col-4" src="assets/img/costumers/monica-rodrigues.png" alt="costumer-portrait">
+                            <div class="col-8">
+                                <div class="h4">Mónica Rodrigues</div>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                            </div>
                         </div>
-                    </div>
-                    <div class="text-justify">
-                        Produtos sem glúten e sem proteína de leite, não havendo contaminação cruzada.
-                        Pão de aveia, pão de alfarroba e broa de milho muito bons.
-                        A tarte de maçã é uma delícia!
-                        Aconselho vivamente!
+                        <div class="text-justify">
+                            Produtos sem glúten e sem proteína de leite, não havendo contaminação cruzada.
+                            Pão de aveia, pão de alfarroba e broa de milho muito bons.
+                            A tarte de maçã é uma delícia!
+                            Aconselho vivamente!
+                        </div>
                     </div>
                 </div>
-                <div class="col-lg-6 costumer-testimonial">
-                    <div class="row">
-                        <img class="col-4" src="assets/img/costumers/flor-pires.png" alt="costumer-portrait">
-                        <div class="col-8">
-                            <div class="h4">Flor Pires</div>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
+                <div class="col mb-4 mb-lg-0">
+                    <div class="costumer-testimonial h-100">
+                        <div class="row">
+                            <img class="col-4" src="assets/img/costumers/flor-pires.png" alt="costumer-portrait">
+                            <div class="col-8">
+                                <div class="h4">Flor Pires</div>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                            </div>
                         </div>
-                    </div>
-                    <div class="text-justify">
-                        Excelente experiência!
-                        Estivemos hoje na padaria e tivemos o prazer de conhecer o Sr. Rui e a sua esposa,
-                        pessoas adoráveis e que se dispuseram a explicar-nos tudo sobre os seus produtos biológicos
-                        e como confeccionam os seus produtos. Tudo sem glúten/livre de diário/vegano e orgânico.
-                        Compramos pão, croissants de ovos, pastéis de atum, iogurte de mirtilo e “croquetes” veganos
-                        tudo delicioso! Certamente é um local a visitar sempre que viermos a Portugal (S. João da Madeira)!
-                        Altamente recomendado! Um lugar para ir se você tem alguma intolerância alimentar!
+                        <div class="text-justify">
+                            Excelente experiência!
+                            Estivemos hoje na padaria e tivemos o prazer de conhecer o Sr. Rui e a sua esposa,
+                            pessoas adoráveis e que se dispuseram a explicar-nos tudo sobre os seus produtos biológicos
+                            e como confeccionam os seus produtos. Tudo sem glúten/livre de diário/vegano e orgânico.
+                            Compramos pão, croissants de ovos, pastéis de atum, iogurte de mirtilo e “croquetes” veganos
+                            tudo delicioso! Certamente é um local a visitar sempre que viermos a Portugal (S. João da Madeira)!
+                            Altamente recomendado! Um lugar para ir se você tem alguma intolerância alimentar!
+                        </div>
                     </div>
                 </div>
-                <div class="col-lg-6 costumer-testimonial">
-                    <div class="row">
-                        <img class="col-4" src="assets/img/costumers/rafael-almeida.png" alt="costumer-portrait">
-                        <div class="col-8">
-                            <div class="h4">Rafael Almeida</div>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
+                <div class="col">
+                    <div class="costumer-testimonial h-100">
+                        <div class="row">
+                            <img class="col-4" src="assets/img/costumers/rafael-almeida.png" alt="costumer-portrait">
+                            <div class="col-8">
+                                <div class="h4">Rafael Almeida</div>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                            </div>
                         </div>
-                    </div>
-                    <div class="text-justify">
-                        Simplesmente fantástico, especialmente pelo sabor e todo o cuidado e atenção que começa na gerência.
-                        Ainda bem que esta loja abriu, resolveu os meus problemas de onde comprar produtos sem glúten e sem leite.
-                        E para melhorar a situação, os produtos são biológicos e o mais saudáveis possível.
-                        Resta-me apenas esperar pelas mesinhas para se poder comer no local.
+                        <div class="text-justify">
+                            Simplesmente fantástico, especialmente pelo sabor e todo o cuidado e atenção que começa na gerência.
+                            Ainda bem que esta loja abriu, resolveu os meus problemas de onde comprar produtos sem glúten e sem leite.
+                            E para melhorar a situação, os produtos são biológicos e o mais saudáveis possível.
+                            Resta-me apenas esperar pelas mesinhas para se poder comer no local.
+                        </div>
                     </div>
                 </div>
             </div>
