Added author and description to all pages

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="" />
-        <meta name="author" content="" />
+        <meta name="description" content="Homepage da loja Sabor de Pão" />
+        <meta name="author" content="PW-M2-G6" />
         <title>Sabor de Pão</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="/assets/favicon.png" />
@@ -58,7 +58,7 @@
     <header class="masthead">
         <div class="container">
             <div class="masthead-subheading">Bem-Vindo à nossa boutique!</div>
-            <div class="masthead-heading text-uppercase">Sabor de Pão</div>
+            <div class="masthead-heading text-uppercase"><strong>Sabor de Pão</strong></div>
             <div class="masthead-subheading">Sem Glúten-Sem Leite</div>
             <a class="btn btn-primary btn-xl text-uppercase" href="#about">DESCOBRIR MAIS</a>
         </div>
