--- a/orders.html
+++ b/orders.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="" />
-        <meta name="author" content="" />
+        <meta name="description" content="Pagina de encomendas da loja Sabor de Pão" />
+        <meta name="author" content="PW-M2-G6" />
         <title>Sabor de Pão</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="/assets/favicon.png" />
