Added Highlighted on Gallery Buttons

--- a/gallery.html
+++ b/gallery.html
@@ -55,7 +55,7 @@
                 </div>
                 <div class="row">
                     <div class="col-lg-4">
-                        <div class="sticky-top d-none d-lg-block side-bar p-4">
+                        <div class="sticky-top d-none d-lg-block side-bar p-4 categorias">
                             <h2>Categorias</h2>
                             <ul class="nav btn-group-vertical">
                                 <li class="nav-item">
