--- a/orders.html
+++ b/orders.html
@@ -41,7 +41,7 @@
                                 <li><a class="dropdown-item" href="/gallery.html">Galeria</a></li>
                             </ul>
                         </li>
-                        <li class="nav-item"><a class="nav-link" href="/orders.html">Encomendas</a></li>
+                        <li class="nav-item"><a class="nav-link active" href="/orders.html">Encomendas</a></li>
                         <li class="nav-item d-flex align-items-center"><a class="nav-link" href="/index.html#contact">Contactos</a></li>
                         <li class="nav-item d-flex align-items-center"><button id="color-scheme" class="nav-link icon fa-solid fa-sun" onclick="toggle_light_mode()"></button></li>
                     </ul>
