--- a/news.html
+++ b/news.html
@@ -31,7 +31,7 @@
                         <li class="nav-item"><a class="nav-link" href="/index.html#about">Sobre Nós</a></li>
                         <li class="nav-item"><a class="nav-link" href="/index.html#portfolio">Produtos</a></li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle">Blog</a>
+                            <a class="nav-link dropdown-toggle active">Blog</a>
                             <ul class="dropdown-menu  d-block d-lg-none">
                                 <li><a class="dropdown-item" href="/info.html">Informações</a></li>
                                 <li><a class="dropdown-item" href="/news.html">Notícias</a></li>
