--- a/orders.html
+++ b/orders.html
@@ -54,7 +54,7 @@
             <div class="container">
                 <div class="text">
                     <h2 class="section-heading text-uppercase">Encomendas</h2>
-                    <h3 class="section-subheading text-muted">Peça aqui a sua encomenda da nossa loja direto para sua casa ou para vir buscar.</h3>
+                    <h3 class="section-subheading text-muted">Peça aqui a sua encomenda da nossa loja direto para sua casa ou para fazer Take-Away.</h3>
                 </div>
                 <div class="d-flex justify-content-center">
                     <iframe class="text-center" src="https://docs.google.com/forms/d/e/1FAIpQLSdc_MjBR9a_-Cr7wy8KaptcuWnKF1oRXJpAe1GipgNHkGeYmw/viewform?embedded=true"
