--- a/gallery.html
+++ b/gallery.html
@@ -81,7 +81,7 @@
                         </div>
                     </div>
                     <div class="col-lg-8 mx-auto">
-                        <h3 id="h-pao" class="pt-2">Pão</h3>
+                        <h3 id="h-pao" class="pt-2">Pão e Broa</h3>
                         <div id="c-pao" class="carousel slide mb-4">
                             <div class="carousel-inner" id="pao">
                                 <div class="carousel-item active">
